Minor copy improvement

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,9 @@
 
 <body>
     <h1>HowManySwimmers</h1>
-    <p>This app uses face detection to count how many swimmers are in a Salties photo. It's not perfect - it misses some
-        faces, but you can just count those separately. Upload an image to get a count!
-    </p>
+    <p>This app uses face detection to count how many swimmers are in a Salties photo.</p>
+    <p>It's not perfect - it misses some faces, but you can just count those separately.</p>
+    <p>Upload an image to get a count!</p>
     <form id="upload-form" enctype="multipart/form-data">
         <input type="file" id="image-upload" name="file" accept="image/*" required>
         <button type="submit">Detect Swimmers' Faces!</button>
